--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- <link rel="stylesheet" href="/assets/css/main.css" /> -->
 	
 
-	<link rel="stylesheet" href="../public/build/css/style.min.css" />
+	<link rel="stylesheet" href="./public/build/css/style.min.css" />
 
 
 </head>
@@ -28,9 +28,9 @@
 	<!-- <script src="/assets/js/main.js"></script> -->
 
 
-	<script type="text/javascript" src="../public/build/vendor.min.js"></script>
+	<script type="text/javascript" src="./public/build/vendor.min.js"></script>
 
 
-	<script type="text/javascript" src="../public/dist/bundle.js"></script>
+	<script type="text/javascript" src="./public/dist/bundle.js"></script>
 </body>
 </html>
